[gd_scene load_steps=25 format=3 uid="uid://d2w1tj3py627d"]

[ext_resource type="Script" uid="uid://dpntg7dfdcdwl" path="res://Interactables/enemies/basic enemy/shaman_enemy.gd" id="1_ma38o"]
[ext_resource type="Texture2D" uid="uid://d05l5cu3bpogh" path="res://Interactables/enemies/basic enemy/enemy_shaman_walk.png" id="2_ma38o"]
[ext_resource type="Texture2D" uid="uid://dpirmuhplivfv" path="res://Interactables/enemies/basic enemy/enemy_shaman_death.png" id="3_ma38o"]
[ext_resource type="Texture2D" uid="uid://jmfvwkvtvea2" path="res://Interactables/enemies/basic enemy/enemy_shaman_shoot.png" id="4_lj0c1"]
[ext_resource type="AudioStream" uid="uid://bacd6ihhixklj" path="res://Assets/enemydeath.wav" id="5_lj0c1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xx02l"]
atlas = ExtResource("3_ma38o")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx4sj"]
atlas = ExtResource("3_ma38o")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b07jf"]
atlas = ExtResource("3_ma38o")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_irfjt"]
atlas = ExtResource("3_ma38o")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gygc7"]
atlas = ExtResource("3_ma38o")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k60uo"]
atlas = ExtResource("3_ma38o")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4yux"]
atlas = ExtResource("3_ma38o")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkmal"]
atlas = ExtResource("4_lj0c1")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj0c1"]
atlas = ExtResource("2_ma38o")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrqu6"]
atlas = ExtResource("2_ma38o")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5cjh"]
atlas = ExtResource("2_ma38o")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jv0fl"]
atlas = ExtResource("2_ma38o")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5y06"]
atlas = ExtResource("2_ma38o")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_167fq"]
atlas = ExtResource("2_ma38o")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1vnm"]
atlas = ExtResource("2_ma38o")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_61c2w"]
atlas = ExtResource("2_ma38o")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5wvf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx02l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx4sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b07jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irfjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gygc7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k60uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4yux")
}],
"loop": false,
"name": &"die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkmal")
}],
"loop": false,
"name": &"shoot",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj0c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrqu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5cjh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jv0fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5y06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_167fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1vnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61c2w")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7tgkl"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_if2qo"]
radius = 13.0

[node name="ShamanEnemy" type="CharacterBody2D" node_paths=PackedStringArray("nav_agent", "animated_sprite", "death_sound_player") groups=["enemies"]]
script = ExtResource("1_ma38o")
speed = 75
nav_agent = NodePath("NavigationAgent2D")
animated_sprite = NodePath("AnimatedSprite2D")
death_sound_player = NodePath("death sound")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
simplify_path = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_c5wvf")
animation = &"walk"
autoplay = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_7tgkl")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_if2qo")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="BulletStartPos" type="Marker2D" parent="."]
position = Vector2(6, -16)

[node name="death sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lj0c1")

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
